Fix mobile menu and hero overlap.

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav {
 .logo {
     width: 120px;
     height: auto;
-    z-index: 10;
+    z-index: 120;
 }
 
 .logo img {
@@ -37,12 +37,13 @@ nav {
     height: 40px;
     font-size: 1rem;
     padding: auto;
-    z-index: 10;
+    z-index: 120;
 }
 
 .nav-links {
     top: -100vh;
     position: fixed;
+    z-index: 100;
     height: 100vh;
     background-color: white;
     right: 0;
@@ -77,7 +78,7 @@ section {
 }
 
 #hero {
-    position: relative;
+    z-index: 10;
     background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
     url('./assets/IMG_3661.jpg');
 
